Initial commit for Celestivo Events 🚀

--- a/birthday.html
+++ b/birthday.html
@@ -184,7 +184,7 @@
       <span>Celestivo Events</span>
     </div>
     <ul>
-      <li><a href="dynamic.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#packages">Packages</a></li>
       <li><a href="#gallery">Gallery</a></li>
     </ul>
@@ -200,7 +200,7 @@
     <h2>Our Birthday Packages</h2>
     <div class="package-cards">
       <div class="card">
-        <img src="C:\Users\WIN\Pictures\Saved Pictures\7e22578056a3177109fecd3bb9b294bb.jpg" alt="Basic Package">
+        <img src="images/7e22578056a3177109fecd3bb9b294bb.jpg" alt="Basic Package">
         <div class="card-content">
           <h3>Basic Package</h3>
           <p>Simple event yet elegant. Includes venue, decoration, and photography.</p>
@@ -208,7 +208,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="C:\Users\WIN\Pictures\Saved Pictures\8c56fe24f20f974e92f5d35f567dbe6e.jpg" alt="Deluxe Package">
+        <img src="images/8c56fe24f20f974e92f5d35f567dbe6e.jpg" alt="Deluxe Package">
         <div class="card-content">
           <h3>Deluxe Package</h3>
           <p>Enhanced package with catering, music + DJ, and custom decorations.</p>
@@ -216,7 +216,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="C:\Users\WIN\Pictures\Saved Pictures\7dcf65a74b3f4db57920e02e13fd9112.jpg" alt="Luxury Package">
+        <img src="images/7dcf65a74b3f4db57920e02e13fd9112.jpg" alt="Luxury Package">
         <div class="card-content">
           <h3>Luxury Package</h3>
           <p>Premium services including luxury venues, entertainment,Disco party,Beverages included.</p>
