--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">
-      <img src="c:\Users\WIN\Pictures\Screenshots\Screenshot 2024-12-15 194153.png" alt="Celestivo Events Logo">
+      <img src="images/Screenshot 2024-12-15 214456.png">
       <span>Celestivo Events</span>
     </div>
     <ul>
@@ -225,7 +225,7 @@
   <!-- Hero Section -->
   <section id="hero">
     <video autoplay muted loop>
-      <source src="C:\Users\WIN\Downloads\WhatsApp Video 2024-12-18 at 14.59.24 (1).mp4" type="video/mp4">
+      <source src="images/WhatsApp Video 2024-12-18 at 14.59.24 (1).mp4" type="video/mp4">
     </video>
     <div class="content">
       <h1>Where Every Event Feels Celestial</h1>
@@ -246,7 +246,8 @@
   <section id="services">
     <div class="service">
       <a href="wedding.html">
-      <img src="C:\Users\WIN\Pictures\Saved Pictures\0235fede5fadab6faf132f6724c7e364.jpg" alt="Weddings">
+      <img src="images/0235fede5fadab6faf132f6724c7e364.jpg" alt="Weddings">
+
       <div class="overlay">
         <h2>Weddings</h2>
       </div>
@@ -254,7 +255,7 @@
     </div>
     <div class="service">
       <a href="birthday.html">
-      <img src="C:\Users\WIN\Pictures\Saved Pictures\78a8dd61d1ff8eb1fa05314b0ea3084f.jpg" alt="birthday">
+      <img src="images/6a670c52e90b53e9526731ed5695c667.jpg" alt="birthday">
       <div class="overlay">
         <h2>Birthdays</h2>
       </div>
@@ -262,7 +263,7 @@
     </div>
     <div class="service">
       <a href="custom.html">
-      <img src="C:\Users\WIN\Pictures\Saved Pictures\3e6ca98135e5d09001c2b11b7d7a75b8.jpg" alt="Custom Events">
+      <img src="images/0521b6d4a01ffe9d5e63515225a3380c.jpg" alt="Custom Events">
       <div class="overlay">
         <h2>Custom Events</h2>
       </div>
@@ -275,7 +276,7 @@
     <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; padding: 20px;">
       <!-- Logo Section -->
       <div style="display: flex; align-items: center;">
-        <img src="c:\Users\WIN\Pictures\Screenshots\Screenshot 2024-12-15 194153.png" alt="Celestivo Events Logo"
+        <img src="images/Screenshot 2024-12-15 214456.png " alt="Celestivo Events Logo"
           style="height: 150px; margin-right: 30px;">
         <span style="font-size: 1.2rem; font-weight: bold;"></span>
       </div>
